Initial commit for AI integration(Gemini) for tailoring resume